<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/NomDuJeuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_du_jeu"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/jouerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jouer_une_partie"
        android:layout_marginTop="60dp"/>
    <Button
        android:id="@+id/voirUpgradeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amelioration"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/BestiaireButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bestiaire"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deconnexion"
        android:layout_marginTop="20dp"/>

</LinearLayout>
